# web-wlambda-srv

./: .gitignore  Cargo.toml  journal.sqlite  main.wl  util.wl
freise/: main.wl  util.wl
qweb/: main.wl  qweb.wl
qweb/webdata/: main.html  main.js
qweb/webdata/css/: bulma.min.css
src/: main.rs
webdata/: main.html  main.js  private.js  public.html  public.js  shop.html  shop.js
webdata/js/: highlight.pack.js
