[package]
name = "web-wlambda-srv"
version = "0.1.0"
authors = ["Weird Constructor <weirdconstructor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wlambda       = { path = "../wlambda" }
hyper         = "0.12.29"
serde         = "1.0.92"
futures       = "0.1"
tokio-process = "0.2.3"
tokio         = "0.1.21"
serde_json    = "1.0.39"
sqlite        = "0.25.0"
